Etapa 2 - parte 4 - contagem de outliers e quantida de linhas removidas na limpeza

--- a/notebooks/Limpeza.ipynb
+++ b/notebooks/Limpeza.ipynb
@@ -131,9 +131,12 @@
    "source": [
     "## Principais informações do arquivo\n",
     "\n",
+    "numero_linhas = base.shape[0]\n",
+    "numero_colunas = base.shape[1]\n",
+    "\n",
     "print(base.info())\n",
-    "print(f'Linhas: {base.shape[0]}')\n",
-    "print(f'Colunas: {base.shape[1]}')\n",
+    "print(f'Linhas: {numero_linhas}')\n",
+    "print(f'Colunas: {numero_colunas}')\n",
     "print(base.describe())"
    ]
   },
@@ -315,9 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No total foram removidos 16371 registros após a limpeza de dados. Nestes registros não havia informações de consumo energético.\n"
+     ]
+    }
+   ],
    "source": [
     "#Criação de uma lista dos nomes das colunas traduzidas para o português e substituir no código\n",
     "\n",
@@ -457,11 +468,13 @@
     "\n",
     "base.rename(columns=colunas_traduzidas, inplace=True)\n",
     "\n",
-    "# Remover linhas com valores NaN nas colunas especificadas\n",
+    "# Remover registros que não possuem histórico de consumo energético\n",
     "base = base.dropna(subset=[\"energia_renovavel\", \"energia_nao_renovavel\"])\n",
-    "\n",
-    "# Remover linhas onde os valores são iguais a 0\n",
     "base = base[(base[\"energia_renovavel\"] != 0) & (base[\"energia_nao_renovavel\"] != 0)]\n",
+    "\n",
+    "numero_linhas_apos_limeza = base.shape[0]\n",
+    "\n",
+    "print(f'No total foram removidos {numero_linhas - numero_linhas_apos_limeza} registros após a limpeza de dados. Nestes registros não havia informações de consumo energético.')\n",
     "\n",
     "caminho_processado = Path.cwd().parent / \"data\" / \"processed\" / \"base.csv\"\n",
     "base.to_csv(caminho_processado, index=False, sep=\";\")\n"
